# tz-coins-guru

./: .editorconfig  .env.example  README.md  docker-compose.yml  pyproject.toml
_docker/: Dockerfile
migrations/models/: 0_20221229222333_init.py  1_20221229222545_update.py  2_20221229225950_update.py  3_20221229230336_update.py  4_20221230013203_update.py  5_20221230013517_update.py  6_20230104213021_update.py  7_20230104234925_update.py
src/: __main__.py  app.py  settings.py
src/models/: __init__.py  accounts.py  sessions.py  tweet.py
src/routers/api/v1/: __init__.py  accounts.py  tweets.py
src/schedulers/: __init__.py  get_tweets.py  get_usernames.py
src/schemas/: linkprofile.py
src/service/: account.py  tweet.py
src/tests/: test_utils.py
src/utils/: trim_link.py  twitter_api.py
